# cpp_simple

./: .gitignore  CMakeLists.txt  CMakeListsTemplate.txt  Makefile  checker.py  cmake_generator.py  graphs.json  image_720p.tiff  image_720p_result.tiff  image_fullhd.tiff  make_graphics.py  metrics.py  precise.py  precise_solution.py  runner.py  visualization.py
src/: comparator.cpp  data.h  data_accessor.h  data_provider.h  data_util.cpp  main.cpp  main.cu  message.h  multi_thread.cpp  optimized_single_thread.cpp  point_generator.h  random_point_generator.cpp  simple_point_generator.cpp  single_thread.cpp  sinlge_thread.cpp  solution.cpp  solution.h
src/impl/cmd/: cmd_utils.cpp
src/impl/logger/: logger.cpp
src/impl/mpi_adapter/: default_mpi_adapter.cpp
src/impl/threading/dispatcher/: dispatcher.cpp  dispatchers.cpp  single_thread_dispatcher.cpp  thread_pool_dispatcher.cpp  thread_pool_dispatchers.cpp  unstable_dispatcher.cpp
src/include/cmd/: cmd_utils.h
src/include/functional/: call_utils.h
src/include/logger/: logger.h
src/include/mpi_adapter/: mpi_adapter.h  mpi_adapter_creators.h
src/include/singleton/: singleton.h
src/include/threading/dispatcher/: dispatcher.h  dispatchers.h
src/include/threading/dispatcher/internal/: internal.h
